=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.10-dev

When running as 'root' make the client side drop the root permissions
and run with the same permissions as the server side
(e.g. nobody). This is needed in case the client side creates any
files after the initial check (during server side startup and beyond),
so that the server side could read/write them. [Stas]

t_server_log_error_is_expected t_server_log_warn_is_expected
t_client_log_error_is_expected t_client_log_warn_is_expected
now support an optional argument, suggesting how many entries
to expect [Stas]



=item 1.09 - March 8, 2004

remove the dependency on APR::UUID (i.e. mod_perl 2.0) in the
same_interpreter framework (use plain time/rand/$$ concatenation)
[Stas]

Updated to the new Apache License Version 2.0 [Gozer]

handle cases on Win32 when supplied paths have spaces in their
names [Stas]

c-modules build errors are no longer ignored [Stas]

change -DAPACHE1 (and like defines) to -D APACHE1 to fix Win32
compatibility issues [Steve Hay]

fix the custom config use for Apache-Test's own upgrades [Stas]



=item 1.08 - February 24, 2004

Instead of hard-coding listen directive to 127.0.0.1, use the server
name. [Gozer]

added -defines configuration option, providing a way to pass additional
-D names to the server for use in <IfDefine> blocks.  [Geoffrey Young]

Make it possible to run TEST (or another driving script) from any path
(e.g. t/TEST, ./TEST, /full/path/to/t/TEST) [Stas]

If at least one *conf*.in files is modified since the last
configuration, make sure to regenerate them all, so the right ports
will be assigned. [Stas]

Make sure that Apache-Test modules are installed into INSTALLSITEARCH
during a standalone build. Because EU::MM does so when A-T is bundled
with mp2, and we want to avoid having A-T installed in two different
places under @INC. [Stas]

HTTP/0.9 responses no longer croak, provided $ENV{APACHE_TEST_HTTP_09_OK} 
is true.  [Geoffrey Young]
